Fix text alignment in header and upload sections
Corrected text alignment properties for various elements.

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ header {
 header h1 {
   margin: 0;
   padding: 0;
+  text-align: cenrer;
   font-size: 3em;
   line-height: 1.2em;    /* vertically centered text */
 }
@@ -41,7 +42,7 @@ header h1 {
 
 
 #pdfupload {
-  align: center;
+  text-align: center;
   display: block;
   margin: 2px auto 0 auto;  
 }
@@ -61,6 +62,7 @@ header h1 {
 /* Upload section text and file input */
 #fileUpload h2 {
   margin-top: 4px;
+  text-align: center;
   margin-bottom: 6px;
   font-size: 1.2em;
 }
@@ -69,6 +71,7 @@ header h1 {
   background-color:Grey;
   color: Red;
   border: 1px solid Green;
+  text-align: center;
   border-radius: 5px;
   padding: 6px;
   margin-top: 4px;
